--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,4 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
@@ -66,3 +62,19 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+/* custom fonts */
+@font-face {
+  font-family: "Inter";
+  src: local("Inter"),
+   url("./assets/fonts/Inter/Inter-VariableFont_opsz\,wght.ttf");
+  font-weight: normal;
+  font-style: normal;
+ }
+ @font-face {
+  font-family: "Luxurious";
+  src: local("Luxurious"),
+   url("./assets/fonts/Luxurious_Script/LuxuriousScript-Regular.ttf");
+  font-weight: normal;
+  font-style: italic;
+ }
